# cpp-template

./: CMakeLists.txt  README.md  conanfile.py
src/: CMakeLists.txt  main.cpp
src/api/: CMakeLists.txt  api.cpp
src/api/include/: api.hpp
test/: CMakeLists.txt
test/api/: CMakeLists.txt  test_suite_1.cpp
